# x1-mining-arena

./: Anchor.toml  README.md  package-lock.json  package.json
programs/x1-mining-arena/: Cargo.toml
programs/x1-mining-arena/src/: lib.rs
scripts/: activate-boost.ts  claim.ts  grant-boost-points.ts  helpers.ts  init-global.ts  init-staking.ts  init-treasury.ts  list-positions.ts  mine.ts  stake.ts  unstake.ts  upsert-boost.ts  wrap-sol.ts
sdk/: client.ts  pdas.ts
sdk/examples/: create-user.ts
tests/: x1-mining-arena.ts
